<resources>
    <string name="app_name">All4Medics</string>
    <string name="title_news">Noutati</string>
    <string name="title_for_you">Pentru tine</string>
    <string name="title_survey">Chestionar</string>
    <string name="title_more">Mai mult</string>
    <string name="title_advices">Sfaturi zilnice</string>
    <string name="title_messages">Mesaje pentru tine</string>

    <string name="button_more">Mai mult …</string>
    <string name="button_retry">Reincearca</string>

    <!-- Survey -->
    <string name="survey_positive_connotation">Foarte mult</string>
    <string name="survey_negative_connotation">Deloc</string>
    <string name="survey_submit">Trimite raspunsuri</string>
    <string name="survey_description">Vrem sa te ajutam sa iti fie mai bine!\nRaspunde la chestionarul de mai jos si lasa-ne sa o facem!</string>

    <!-- SurveyResult -->
    <string name="survey_result_good">Ne bucurăm că starea ta este una bună, suntem aici pentru ține dacă ai nevoie de un specialist în sănătate mintală.</string>
    <string name="survey_result_neutral">Nivelul tău de echilibru emoțional este unul mediu. Îți recomandăm să reaplici chestionarul în câteva zile pentru o monitorizare mai atentă a stării psihice si să vorbești cu un specialist despre stările tale.</string>
    <string name="survey_result_bad">Pare că ai trecut prin multe în ultima vreme, considerăm că este necesar să vorbești cu un specialist despre stările tale.</string>
    <string name="survey_result_none">Suntem mereu alături de tine si avem pe cineva gata să vorbească cu tine!</string>
    <string name="survey_result_take_care">Ai grija de tine</string>
    <string name="survey_result_phone_number_label">Numar telefon:</string>
    <string name="survey_result_or_mail_label">Sau ne poti scrie la adresa de mai jos</string>
    <string name="survey_result_email_label">Adresa de email:</string>


    <!-- For you -->


    <!-- More -->
    <string-array name="moreMenuItems">
        <item>Profil</item>
        <item>Jurnalul eroului</item>
        <item>Statistici</item>
        <item>Setari</item>
        <item>Contact</item>
    </string-array>

    <!-- Profile -->
    <string name="profileCity">Oras</string>
    <string name="profileHospital">Spital</string>
    <string name="profileJob">Profesie</string>
    <string name="profilePhone">Telefon</string>

</resources>
