<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.db.mobile.mental_health.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_advices"
        android:name="com.db.mobile.mental_health.ui.advices.AdvicesFragment"
        android:label="@string/title_advices"
        tools:layout="@layout/fragment_advices" />

    <fragment
        android:id="@+id/navigation_survey"
        android:name="com.db.mobile.mental_health.ui.survey.SurveyFragment"
        android:label="@string/title_survey"
        tools:layout="@layout/fragment_survey" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.db.mobile.mental_health.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

</navigation>
